took out some padding in the header that was causing issues on iPhone in portrait more

--- a/sass/_modules.scss
+++ b/sass/_modules.scss
@@ -17,6 +17,7 @@ header[role="banner"] {
   top: 0;
   width: 100%;
   z-index: 2;
+  .container { padding: 0; }
   h1 {
     margin-bottom: 0;
     color: #fff;
@@ -35,7 +36,6 @@ header[role="banner"] {
     color: $statamicTan;
     }
   nav {
-    float: right;
     width: 100%;
     text-align: center;
     display: block;
